--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "game-of-life",
+  "homepage": "https://nmitic.github.io/game-of-life/",
   "version": "0.0.0",
   "private": true,
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build"
+    "build": "react-scripts build",
+    "predeploy" : "npm run build",
+    "deploy" : "gh-pages -d build"
   },
   "browserslist": {
     "production": [
@@ -22,9 +25,10 @@
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
     "@types/styled-components": "^5.1.2",
+    "gh-pages": "^5.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "^3.4.1",
+    "react-scripts": "5.0.1",
     "styled-components": "^5.1.1",
     "typescript": "^3.9.3"
   }
